--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-# All the Categories of posts
+# All the posts of posts
 ---
 
 <h1>
@@ -13,54 +13,54 @@ layout: page
 
 {% assign group_index = 0 %}
 
-{% assign sort_categories = site.categories | sort %}
+{% assign sort_posts = site.posts | sort %}
 
-{% for category in sort_categories %}
+{% for category in sort_posts %}
   {% assign category_name = category | first %}
   {% assign posts_of_category = category | last %}
   {% assign first_post = posts_of_category | first %}
 
-  {% if category_name == first_post.categories[0] %}
-    {% assign sub_categories = '' | split: '' %}
+  {% if category_name == first_post.posts[0] %}
+    {% assign sub_posts = '' | split: '' %}
 
     {% for post in posts_of_category %}
-      {% assign second_category = post.categories[1] %}
+      {% assign second_category = post.posts[1] %}
       {% if second_category %}
-        {% unless sub_categories contains second_category %}
-          {% assign sub_categories = sub_categories | push: second_category %}
+        {% unless sub_posts contains second_category %}
+          {% assign sub_posts = sub_posts | push: second_category %}
         {% endunless %}
       {% endif %}
     {% endfor %}
 
-    {% assign sub_categories = sub_categories | sort %}
-    {% assign sub_categories_size = sub_categories | size %}
+    {% assign sub_posts = sub_posts | sort %}
+    {% assign sub_posts_size = sub_posts | size %}
 
-    <div class="card categories">
+    <div class="card posts">
       <!-- top-category -->
       <div
         id="{{ HEAD_PREFIX }}{{ group_index }}"
         class="card-header d-flex justify-content-between hide-border-bottom"
       >
         <span class="ms-2">
-          <i class="far fa-folder{% if sub_categories_size > 0 %}-open{% endif %} fa-fw"></i>
+          <i class="far fa-folder{% if sub_posts_size > 0 %}-open{% endif %} fa-fw"></i>
 
-          {% capture _category_url %}/categories/{{ category_name | slugify | url_encode }}/{% endcapture %}
+          {% capture _category_url %}/posts/{{ category_name | slugify | url_encode }}/{% endcapture %}
           <a href="{{ _category_url | relative_url }}" class="mx-2">{{ category_name }}</a>
 
           <!-- content count -->
-          {% assign top_posts_size = site.categories[category_name] | size %}
+          {% assign top_posts_size = site.posts[category_name] | size %}
           <span class="text-muted small font-weight-light">
-            {% if sub_categories_size > 0 %}
-              {{ sub_categories_size }}
-              {% if sub_categories_size > 1 %}
+            {% if sub_posts_size > 0 %}
+              {{ sub_posts_size }}
+              {% if sub_posts_size > 1 %}
                 {{
-                  site.data.locales[lang].categories.category_measure.plural
-                  | default: site.data.locales[lang].categories.category_measure
+                  site.data.locales[lang].posts.category_measure.plural
+                  | default: site.data.locales[lang].posts.category_measure
                 }}
               {% else %}
                 {{
-                  site.data.locales[lang].categories.category_measure.singular
-                  | default: site.data.locales[lang].categories.category_measure
+                  site.data.locales[lang].posts.category_measure.singular
+                  | default: site.data.locales[lang].posts.category_measure
                 }}
               {% endif -%}
               ,
@@ -70,20 +70,20 @@ layout: page
 
             {% if top_posts_size > 1 %}
               {{
-                site.data.locales[lang].categories.post_measure.plural
-                | default: site.data.locales[lang].categories.post_measure
+                site.data.locales[lang].posts.post_measure.plural
+                | default: site.data.locales[lang].posts.post_measure
               }}
             {% else %}
               {{
-                site.data.locales[lang].categories.post_measure.singular
-                | default: site.data.locales[lang].categories.post_measure
+                site.data.locales[lang].posts.post_measure.singular
+                | default: site.data.locales[lang].posts.post_measure
               }}
             {% endif %}
           </span>
         </span>
 
         <!-- arrow -->
-        {% if sub_categories_size > 0 %}
+        {% if sub_posts_size > 0 %}
           <a
             href="#{{ LIST_PREFIX }}{{ group_index }}"
             data-bs-toggle="collapse"
@@ -101,30 +101,30 @@ layout: page
       </div>
       <!-- .card-header -->
 
-      <!-- Sub-categories -->
-      {% if sub_categories_size > 0 %}
+      <!-- Sub-posts -->
+      {% if sub_posts_size > 0 %}
         <div id="{{ LIST_PREFIX }}{{ group_index }}" class="collapse show" aria-expanded="true">
           <ul class="list-group">
-            {% for sub_category in sub_categories %}
+            {% for sub_category in sub_posts %}
               <li class="list-group-item">
                 <i class="far fa-folder fa-fw"></i>
 
-                {% capture _sub_ctg_url %}/categories/{{ sub_category | slugify | url_encode }}/{% endcapture %}
+                {% capture _sub_ctg_url %}/posts/{{ sub_category | slugify | url_encode }}/{% endcapture %}
                 <a href="{{ _sub_ctg_url | relative_url }}" class="mx-2">{{ sub_category }}</a>
 
-                {% assign posts_size = site.categories[sub_category] | size %}
+                {% assign posts_size = site.posts[sub_category] | size %}
                 <span class="text-muted small font-weight-light">
                   {{ posts_size }}
 
                   {% if posts_size > 1 %}
                     {{
-                      site.data.locales[lang].categories.post_measure.plural
-                      | default: site.data.locales[lang].categories.post_measure
+                      site.data.locales[lang].posts.post_measure.plural
+                      | default: site.data.locales[lang].posts.post_measure
                     }}
                   {% else %}
                     {{
-                      site.data.locales[lang].categories.post_measure.singular
-                      | default: site.data.locales[lang].categories.post_measure
+                      site.data.locales[lang].posts.post_measure.singular
+                      | default: site.data.locales[lang].posts.post_measure
                     }}
                   {% endif %}
                 </span>
