--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,8 +3,8 @@
     <header class="profile-wrapper">
       <a href="{{ '/' | relative_url }}" id="avatar" class="rounded-circle">
         {%- if site.avatar != empty and site.avatar -%}
-          {%- capture avatar_url -%}
-            {% include media-url.html src=site.avatar %}
+          {%- capture avatar_url -%} 
+            <!--{% include media-url.html src=site.avatar %}-->
           {%- endcapture -%}
           <img src="{{- avatar_url -}}" width="112" height="112" alt="avatar" onerror="this.style.display='none'">
         {%- endif -%}
