--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,7 +36,7 @@
   
         <!-- blog -->
         <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
-          <a href="{{ '/posts' | relative_url }}" class="nav-link">
+          <a href="{{ '/blog' | relative_url }}" class="nav-link">
             <i class="fa-fw "></i>
             <span>BLOG</span>
           </a>
